--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -160,6 +160,10 @@
     <Compile Include="Migrations\201902201521281_PopulateMembershipTypes.Designer.cs">
       <DependentUpon>201902201521281_PopulateMembershipTypes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201902201541457_ApplyAnnotationsToCustomerName.cs" />
+    <Compile Include="Migrations\201902201541457_ApplyAnnotationsToCustomerName.Designer.cs">
+      <DependentUpon>201902201541457_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -241,6 +245,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201902201521281_PopulateMembershipTypes.resx">
       <DependentUpon>201902201521281_PopulateMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201902201541457_ApplyAnnotationsToCustomerName.resx">
+      <DependentUpon>201902201541457_ApplyAnnotationsToCustomerName.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
