--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -164,6 +164,14 @@
     <Compile Include="Migrations\201902201541457_ApplyAnnotationsToCustomerName.Designer.cs">
       <DependentUpon>201902201541457_ApplyAnnotationsToCustomerName.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201902201731380_AddNameToMembershipType.cs" />
+    <Compile Include="Migrations\201902201731380_AddNameToMembershipType.Designer.cs">
+      <DependentUpon>201902201731380_AddNameToMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201902201735318_SetNameOfMembershipTypes.cs" />
+    <Compile Include="Migrations\201902201735318_SetNameOfMembershipTypes.Designer.cs">
+      <DependentUpon>201902201735318_SetNameOfMembershipTypes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -247,6 +255,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201902201541457_ApplyAnnotationsToCustomerName.resx">
       <DependentUpon>201902201541457_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201902201731380_AddNameToMembershipType.resx">
+      <DependentUpon>201902201731380_AddNameToMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201902201735318_SetNameOfMembershipTypes.resx">
+      <DependentUpon>201902201735318_SetNameOfMembershipTypes.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
